welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:2: error: illegal start of statement
  else if (a%5==0 && a%3==0){
  ^