welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.code
def fizzBuzz(a:Int):String = {
  else if (a%5==0 && a%3==0){
    return "Fizz Buzz"
  if(a%3==0){
    return "Fizz"
  }

  }
  else if (a%5==0){
    return "Buzz"
  }

  else {
    return ""+a
  }
}